[gd_scene load_steps=5 format=3 uid="uid://fewbrhimlr8g"]

[ext_resource type="Script" uid="uid://b6d7d4qpscnr6" path="res://Menus/Scripts/Main Menu.gd" id="1_cpkr3"]
[ext_resource type="Theme" uid="uid://drygv0g3n8240" path="res://Menus/Assets/Label.tres" id="2_e78ir"]
[ext_resource type="FontFile" uid="uid://bypuvq5s2ra6o" path="res://Menus/Assets/font-bold.otf" id="3_2jd3u"]
[ext_resource type="Theme" uid="uid://ds2r3mfc2p217" path="res://Menus/Assets/Button.tres" id="3_urxw4"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_cpkr3")

[node name="Title" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.4

[node name="Label" type="Label" parent="Title"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_e78ir")
theme_override_fonts/font = ExtResource("3_2jd3u")
theme_override_font_sizes/font_size = 144
text = "Hooves of Havoc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_urxw4")
theme_override_font_sizes/font_size = 80
text = "Start"

[node name="SettingsButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_urxw4")
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="QuitButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("3_urxw4")
theme_override_font_sizes/font_size = 80
text = "Quit"

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
